Small fix on mobile carousel animation

--- a/src/assets/scss/page/shop.scss
+++ b/src/assets/scss/page/shop.scss
@@ -113,7 +113,7 @@
     }
 
     100% {
-        transform: translate(-45%, 0);
+        transform: translate(calc(-50% + 12px), 0);
     }
 }
 
@@ -123,7 +123,7 @@
     }
 
     1% {
-        transform: translate(-45%, 0);
+        transform: translate(calc(-50% + 12px), 0);
     }
 
     100% {
